versioned_docs/version-3.0/associate-paywalls-to-transactions.md
---
title: "Associate paywalls to purchase transactions in Observer mode"
description: "Linking Paywalls to Transactions | Adapty Docs"
metadataTitle: "Associate paywalls with transactions in Adapty for better user insights and revenue tracking."
---

import Zoom from 'react-medium-image-zoom';
import 'react-medium-image-zoom/dist/styles.css';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem'; 

In Observer mode, Adapty SDK cannot determine the source of purchases as you are the one processing them. Therefore, if you intend to use paywalls and/or A/B tests in Observer mode, you need to report the transaction coming from your app store and associate it with the corresponding paywall in your mobile app code. This is important to get right before releasing your app, otherwise it will lead to errors in analytics.

<Tabs groupId="associate-paywalls-to-transactions">
<TabItem value="Swift" label="Swift" default>

Include the `variationId` directly when recording the transaction using the new `reportTransaction` method. Check out the final code example in the [Associate paywalls with purchase transactions in Observer mode](associate-paywalls-to-transactions).

:::warning

Don't forget to record the transaction using the `reportTransaction` method. Skipping this step means Adapty won't recognize the transaction, won't grant access levels, won't include it in analytics, and won't send it to integrations. This step is essential!

:::

```swift showLineNumbers
do {
    // every time when calling transasction.finish()
    try await Adapty.reportTransaction(transaction, withVariationId: <YOUR_PAYWALL_VARIATION_ID>)
} catch {
    // handle the error
}
```
Request parameters:

| Parameter           | Presence | Description                                                  |
| ------------------- | -------- | ------------------------------------------------------------ |
| **withVariationId** | optional | The string identifier of the variation. You can get it using the `variationId` property of the [`AdaptyPaywall`](sdk-models#adaptypaywall)  object. |
| **transaction**     | required | <p>For StoreKit1: an [`SKPaymentTransaction`](https://developer.apple.com/documentation/storekit/skpaymenttransaction)  object.</p><p>For StoreKit 2: [Transaction](https://developer.apple.com/documentation/storekit/transaction)  object.</p> |

</TabItem>
<TabItem value="kotlin" label="Kotlin" default>

Associate the transaction generated by Google to the corresponding paywall in your mobile app code using the `variationId` parameter as shown in the example below. Make sure you always associate the transaction with the paywall that generated it, only then you will be able to see the correct metrics in the Adapty Dashboard.

:::warning

Don't forget to associate the transaction with the paywall. Skipping this step means Adapty won't grant access levels, won't update the analytics, and won't send the link to integrations. This step is essential!

:::

```kotlin showLineNumbers
Adapty.setVariationId(transactionId, variationId) { error ->
    if (error == null) {
        // success
    }
}
```
Request parameters:

| Parameter     | Presence | Description                                                  |
| ------------- | -------- | ------------------------------------------------------------ |
| variationId   | required | The string identifier of the variation. You can get it using `variationId` property  of the [`AdaptyPaywall`](sdk-models#adaptypaywall)  object. |
| transactionId | required | String identifier (`purchase.getOrderId()`) of the purchase, where the purchase is an instance of the billing library [Purchase](https://developer.android.com/reference/com/android/billingclient/api/Purchase) class. |

</TabItem>
<TabItem value="java" label="Java" default>

Associate the transaction generated by Google to the corresponding paywall in your mobile app code using the `variationId` parameter as shown in the example below. Make sure you always associate the transaction with the paywall that generated it, only then you will be able to see the correct metrics in the Adapty Dashboard.

:::warning

Don't forget to associate the transaction with the paywall. Skipping this step means Adapty won't grant access levels, won't update the analytics, and won't send the link to integrations. This step is essential!

:::

```java showLineNumbers
Adapty.setVariationId(transactionId, variationId, error -> {
    if (error == null) {
        // success
    }
});
```
Request parameters:

| Parameter     | Presence | Description                                                  |
| ------------- | -------- | ------------------------------------------------------------ |
| variationId   | required | The string identifier of the variation. You can get it using `variationId` property  of the [`AdaptyPaywall`](sdk-models#adaptypaywall)  object. |
| transactionId | required | <p>For iOS, StoreKit1: an [`SKPaymentTransaction`](https://developer.apple.com/documentation/storekit/skpaymenttransaction)  object.</p><p>For iOS, StoreKit 2: [Transaction](https://developer.apple.com/documentation/storekit/transaction)  object.</p><p>For Android: String identifier (`purchase.getOrderId()`) of the purchase, where the purchase is an instance of the billing library [Purchase](https://developer.android.com/reference/com/android/billingclient/api/Purchase) class.</p> |

</TabItem>
<TabItem value="Flutter" label="Flutter" default>

Associate the transaction generated by Apple or Google to the corresponding paywall in your mobile app code using the `variationId` parameter as shown in the example below. Make sure you always associate the transaction with the paywall that generated it, only then you will be able to see the correct metrics in the Adapty Dashboard.

:::warning

Don't forget to associate the transaction with the paywall. Skipping this step means Adapty won't grant access levels, won't update the analytics, and won't send the link to integrations. This step is essential!

:::

```javascript showLineNumbers
try {
    // every time when calling transasction.finish()
    await Adapty().reportTransaction(
        "YOUR_TRANSACTION_ID", 
        variationId: "PAYWALL_VARIATION_ID", // optional
    );
} on AdaptyError catch (adaptyError) {
    // handle the error
} catch (e) {
    // handle the error
}
```
Request parameters:

| Parameter            | Presence | Description                                                  |
| -------------------- | -------- | ------------------------------------------------------------ |
| PAYWALL_VARIATION_ID | optional | The string identifier of the variation. You can get it using `variationId` property  of the [`AdaptyPaywall`](sdk-models#adaptypaywall)  object. |
| YOUR_TRANSACTION_ID  | required | <p>For iOS, StoreKit1: an [`SKPaymentTransaction`](https://developer.apple.com/documentation/storekit/skpaymenttransaction)  object.</p><p>For iOS, StoreKit 2: [Transaction](https://developer.apple.com/documentation/storekit/transaction)  object.</p><p>For Android: String identifier (`purchase.getOrderId()`) of the purchase, where the purchase is an instance of the billing library [Purchase](https://developer.android.com/reference/com/android/billingclient/api/Purchase) class.</p> |

</TabItem>
<TabItem value="Unity" label="Unity" default>

Associate the transaction generated by Apple or Google to the corresponding paywall in your mobile app code using the `variationId` parameter as shown in the example below. Make sure you always associate the transaction with the paywall that generated it, only then you will be able to see the correct metrics in the Adapty Dashboard.

:::warning

Don't forget to associate the transaction with the paywall. Skipping this step means Adapty won't grant access levels, won't update the analytics, and won't send the link to integrations. This step is essential!

:::

```csharp showLineNumbers
// every time when calling transasction.finish()

Adapty.ReportTransaction(
  "YOUR_TRANSACTION_ID", 
  "PAYWALL_VARIATION_ID", // optional
  (error) => {
  // handle the error
});
```
Request parameters:

| Parameter            | Presence | Description                                                  |
| -------------------- | -------- | ------------------------------------------------------------ |
| PAYWALL_VARIATION_ID | optional | The string identifier of the variation. You can get it using `variationId` property  of the [`AdaptyPaywall`](sdk-models#adaptypaywall)  object. |
| YOUR_TRANSACTION_ID  | required | <p>For iOS, StoreKit1: an [`SKPaymentTransaction`](https://developer.apple.com/documentation/storekit/skpaymenttransaction)  object.</p><p>For iOS, StoreKit 2: [Transaction](https://developer.apple.com/documentation/storekit/transaction)  object.</p><p>For Android: String identifier (`purchase.getOrderId()`) of the purchase, where the purchase is an instance of the billing library [Purchase](https://developer.android.com/reference/com/android/billingclient/api/Purchase) class.</p> |

</TabItem>
<TabItem value="RN" label="React Native (TS)" default>

Associate the transaction generated by Apple or Google to the corresponding paywall in your mobile app code using the `variationId` parameter as shown in the example below. Make sure you always associate the transaction with the paywall that generated it, only then you will be able to see the correct metrics in the Adapty Dashboard.

:::warning

Don't forget to associate the transaction with the paywall. Skipping this step means Adapty won't grant access levels, won't update the analytics, and won't send the link to integrations. This step is essential!

:::

```typescript showLineNumbers
const variationId = paywall.variationId;

try {
    await adapty.reportTransaction(transactionId, variationId);
} catch (error) {
    // handle the `AdaptyError`
}
```
Request parameters:

| Parameter     | Presence | Description                                                  |
| ------------- | -------- | ------------------------------------------------------------ |
| variationId   | required | The string identifier of the variation. You can get it using `variationId` property  of the [`AdaptyPaywall`](sdk-models#adaptypaywall)  object. |
| transactionId | required | <p>For iOS, StoreKit1: an [`SKPaymentTransaction`](https://developer.apple.com/documentation/storekit/skpaymenttransaction)  object.</p><p>For iOS, StoreKit 2: [Transaction](https://developer.apple.com/documentation/storekit/transaction)  object.</p><p>For Android: String identifier (`purchase.getOrderId()`) of the purchase, where the purchase is an instance of the billing library [Purchase](https://developer.android.com/reference/com/android/billingclient/api/Purchase) class.</p> |

</TabItem>
</Tabs>


For accurate analytics, ensure the transaction is associated with the paywall within 3 hours of its creation.